[package]
name = "cch23-codeman99-11a6b43e-33e3-4e59-95d2-62fe1b7711f4"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
indexmap = "2.1.0"
png = "0.17.10"
rocket = { version = "0.5.0", features = ["json"] }
rustemon = "3.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"

[dev-dependencies]
rstest = "0.18.2"
