[package]
name = "cch23-codeman99-11a6b43e-33e3-4e59-95d2-62fe1b7711f4"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
indexmap = "2.1.0"
png = "0.17.10"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
rustemon = "3.2.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
shuttle-persist = "0.35.1"
shuttle-rocket = "0.35.1"
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
ulid = { version = "1.1.0", features = ["std", "serde", "uuid"] }

[dev-dependencies]
rstest = "0.18.2"
